--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
             <div class="row">
 
                 <!-- FIRST CARD -->
-                <div class="col-0 col-lg-4">
+                <div class="first-col col-0 col-lg-4">
                     <div class="card bg-dark text-light">
                         <img src="./img/card-1.webp" class="card-img-top"></img>
                         <div class="card-body">
                             <h5 class="card-title">We <span>Build</span></h5>
-                            <p class="card-text">Lucky Wheels is ready to build your dream bike, tricycle or motorcycle. Lucky wheels provides you the best mechanical people that has more than 10 years of experience. Lucky wheels is ready to serve you.</p>
+                            <p class="card-text">Lucky Wheels is engaged in designing and rebuilding motorcycle and bicycle. It provides you the rebirth of your dream motorcycle and bicycle through the contribution of experts in small engine and bike mechanics. Lucky wheels is ready to serve you.</p>
                             <a href="https://www.facebook.com/Lucky-Wheels-Motorcycle-Parts-and-Bike-Shop-100474314890447" class="btn" target="_blank">Visit our Page</a>
                         </div>
                     </div>
@@ -71,19 +71,19 @@
                         <img src="./img/card-2.jpg" class="card-img-top"></img>
                         <div class="card-body">
                             <h5 class="card-title">We <span>Repair</span></h5>
-                            <p class="card-text">Lucky wheels repairs all damaged parts of your bikes, tricycles, motorcycles. We also repair and tune engines. Lucky wheels provides you the best mechanical people that has more than 10 years of experience. Lucky Wheels is ready to serve you.</p>
+                            <p class="card-text">Lucky Wheels provides minor and major repairs in all damage parts of bike and motorcycle. It can provide you the best service to the most common problem areas like accessories, brakes, electrical and fuel systems including proper maintenance. You cam select accessories and features in order to enhance your motorcycle'sappearance, safety, performance or comfort.</p>
                             <a href="https://www.facebook.com/Lucky-Wheels-Motorcycle-Parts-and-Bike-Shop-100474314890447" class="btn" target="_blank">Visit our Page</a>
                         </div>
                     </div>
                 </div>
 
                 <!-- THIRD CARD -->
-                <div class="col-0 col-lg-4">
+                <div class="third-col col-0 col-lg-4">
                     <div class="card bg-dark text-light">
                         <img src="./img/card-3.jpeg" class="card-img-top"></img>
                         <div class="card-body">
                             <h5 class="card-title">We <span>Provide</span></h5>
-                            <p class="card-text">Lucky Wheels provides you the best quality materials that has a more affordable price among all stores in San Fabian Pangasinan and maybe across the country. We will provide you and serve you. Lucky Wheels is ready to help you budget your desires in building, repairing or buying our bike and motorcycle parts. </p>
+                            <p class="card-text">Lucky Wheels provides you the best quality materials with affordable and competitive price among all stores in Pangasinan and maybe across the country . We are ready to help and accomodate your budgetary requirements in building, repairing and buying our bike and motorcycle parts.</p>
                             <a href="https://www.facebook.com/Lucky-Wheels-Motorcycle-Parts-and-Bike-Shop-100474314890447" class="btn" target="_blank">Visit our Page</a>
                         </div>
                     </div>
