--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                 </div>
 
                 <!-- SECOND CARD -->
-                <div class="col-0 col-lg-4">
+                <div class="second-col col-0 col-lg-4">
                     <div class="card bg-dark text-light">
                         <img src="./img/card-2.jpg" class="card-img-top"></img>
                         <div class="card-body">
                             <h5 class="card-title">We <span>Repair</span></h5>
-                            <p class="card-text">Lucky Wheels provides minor and major repairs in all damage parts of bike and motorcycle. It can provide you the best service to the most common problem areas like accessories, brakes, electrical and fuel systems including proper maintenance. You cam select accessories and features in order to enhance your motorcycle'sappearance, safety, performance or comfort.</p>
+                            <p class="card-text">Lucky Wheels provides minor and major repairs in all damaged parts of bike and motorcycle. It can provide you the best service to the most common problem areas like accessories, brakes, electrical and fuel systems including proper maintenance. You can select accessories and features in order to enhance your motorcycle's appearance, safety, performance or comfort.</p>
                             <a href="https://www.facebook.com/Lucky-Wheels-Motorcycle-Parts-and-Bike-Shop-100474314890447" class="btn" target="_blank">Visit our Page</a>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                         <img src="./img/card-3.jpeg" class="card-img-top"></img>
                         <div class="card-body">
                             <h5 class="card-title">We <span>Provide</span></h5>
-                            <p class="card-text">Lucky Wheels provides you the best quality materials with affordable and competitive price among all stores in Pangasinan and maybe across the country . We are ready to help and accomodate your budgetary requirements in building, repairing and buying our bike and motorcycle parts.</p>
+                            <p class="card-text ">Lucky Wheels provides you the best quality materials with affordable and competitive price among all stores in Pangasinan and maybe across the country. We are ready to help and accomodate your budgetary requirements in building, repairing and buying our bike and motorcycle parts.</p>
                             <a href="https://www.facebook.com/Lucky-Wheels-Motorcycle-Parts-and-Bike-Shop-100474314890447" class="btn" target="_blank">Visit our Page</a>
                         </div>
                     </div>
