--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h1 class="second-header">We <span>Repair</span></h1>
                 <h1 class="third-header">We <span>Provide</span></h1>
 
-                <a href="#about" class="btn">Learn More</a>
+                <!-- <a href="#about" class="btn">Learn More</a> -->
             </div>
         </section>
     </header>
